# generator-python

./: .prettierrc.toml  README.md  package.json
app/: index.js
app/templates/: .appveyor.yml  .readthedocs.yml  .travis.yml  LICENSE  Makefile  README.rst  pyproject.toml  tasks.py
app/templates/docs/: conf.py  index.rst
