[tool.poetry]
name = "<%- name %>"
version = "<%- version %>"
description = ""
authors = ["<%- author %> <<%- email %>>"]
packages = [{ include = "<%- name %>" }]
documentation = "<%- documentation %>"
repository = "<%- repository %>"
readme = "README.rst"
license = "ISC"

[tool.poetry.dependencies]
python = "^<%- python %>"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
