[tool.poetry]
name = "<%- package_name %>"
version = "<%- version %>"
description = ""
authors = ["<%- author %> <<%- email %>>"]
packages = [{ include = "<%- package_name %>" }]
documentation = "https://<%- project_name %>.readthedocs.io/"
repository = "<%- repository %>"
readme = "README.rst"
license = "ISC"

[tool.poetry.dependencies]
python = "^3.<%- python_minor %>-dev"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
